[package]

name            = "summed-area-table"
version         = "0.0.7"
authors         = ["Mohammed El Batya"]
description     = "Implementation of a summed area table"
documentation   = "https://github.com/forgemo/summed_area_table/blob/master/README.md"
homepage        = "https://github.com/forgemo/summed_area_table"
repository      = "https://github.com/forgemo/summed_area_table"
readme          = "README.md"
keywords        = ["summed", "integral", "image",  "haar", "face"]
license         = "Unlicense"


[dependencies]
nalgebra = "0.3.0"
num = "0.1.27"
